# MG400_ROS2

./: .gitignore  pyproject.toml
doc/: ComanndQueuePlugin.md
mg400_bringup/: package.xml  setup.py
mg400_bringup/launch/: display.launch.py  joy.launch.py  main.launch.py  mg400.launch.py  rsp.launch.py  rviz.launch.py
mg400_common/: package.xml
mg400_common/include/mg400_common/: kinematics.hpp  mg400_ik_util.hpp
mg400_common/src/: mg400_ik_util.cpp
mg400_common/test/: test_mg400_kinematics.cpp
mg400_description/urdf/: mg400.xacro
mg400_interface/: package.xml
mg400_interface/src/: mg400_interface.cpp
mg400_interface/src/commander/: dashboard_commander.cpp  motion_commander.cpp  response_parser.cpp
mg400_interface/src/tcp_interface/: dashboard_tcp_interface.cpp  tcp_socket_handler.cpp
mg400_msgs/: package.xml
mg400_msgs/action/: JointMovJ.action  MovJ.action
mg400_msgs/srv/: EnableRobot.srv  InverseSolution.srv
mg400_node/: CMakeLists.txt  README.md  package.xml
mg400_node/include/mg400_node/: mg400_node.hpp
mg400_node/src/: mg400_node.cpp
mg400_plugin/: CMakeLists.txt  dashboard_api_plugins.xml  motion_api_plugins.xml  package.xml
mg400_plugin/include/mg400_plugin/: plugin_utils.hpp  tf_manager.hpp
mg400_plugin/src/: tf_manager.cpp
mg400_plugin/src/dashboard_api/: acc_j.cpp  cp.cpp  (+21 more)
mg400_plugin_base/: CMakeLists.txt
mg400_tools/: CMakeLists.txt  package.xml
mg400_tools/config/: commands.yaml
mg400_tools/include/mg400_tools/: command_queue_client.hpp
mg400_tools/src/: command_queue_client.cpp
scripts/: command_sender.py
(+26 files in other folders)
